<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin" >

    <!-- Contenedor principal -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" >

        <!-- Contenedor por grupo de caracteristicas: Cabello -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <!-- Contenedores para texto y lista deslizable -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cabello" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/largo_text_query"
                    android:layout_height="wrap_content"
                    android:text="@string/tamano" />

                <Spinner
                    android:id="@+id/cabello_tamanio_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/largo_text_query"
                    android:layout_height="wrap_content"
                    android:text="@string/forma" />

                <Spinner
                    android:id="@+id/cabello_forma_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/largo_text_query"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <Spinner
                    android:id="@+id/cabello_color_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </LinearLayout>

        </LinearLayout>

        <!-- Contenedor por grupo de caracteristicas: Piel -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <!-- Contenedores para texto y lista deslizable -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/piel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/largo_text_query"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <Spinner
                    android:id="@+id/piel_color_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <!-- Contenedor por grupo de caracteristicas: Ojos -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <!-- Contenedores para texto y lista deslizable -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ojos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/largo_text_query"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <Spinner
                    android:id="@+id/ojo_color_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
        
        <Button android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/enviarBoton"
            android:onClick="consultar"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"/>
        
    </LinearLayout>

</ScrollView>
